[package]
name = "template"
version = "0.1.0"
edition = "2021"

[lints.rust]
# missing_docs = "warn"

[lints.clippy]
# cargo = "warn"
pedantic = "warn"
# nursery = "warn"

[dependencies]
graphql_client = "0.14.0"
octocrab = "0.43.0"
serde = "1.0.218"
snmalloc-rs = "0.3.7"
tokio = { version = "1.43.0", features = ["full"] }

[dev-dependencies]
criterion = "0.5.1"
pprof = { version = "0.14.0" , features = ["flamegraph", "criterion"] }
